tests/agl/rejections/parse/two_for_clauses.agl
for x in [1, 2] for y in [3, 4] do
  ()
done
